tests/lean/1011.lean.expected.out
1011.lean:5:11-5:13: error: unknown identifier 'AA'
